truncate worst candidate sidebar widget - fixes #135 add victims voice widget - fixes#132

--- a/client/styles/app.less
+++ b/client/styles/app.less
@@ -966,7 +966,7 @@ ul#map-layers li input {
 	border-radius: 0;
 }
 
-.join-convo-form button, .modal-body button {
+.join-convo-form button, .share-story-button, .modal-body button {
 	height: 70px;
 	background-color: #000;
 	color: #fff;
